feat: include lobby master name in listing
